Add statistics endpoints and integrate StatsService for game statistics management
Introduce new API endpoints for retrieving general statistics, impostor wins, player wins, and specific impostor stats. Implement functionality to save game results in the StatsService. Update package.json to include a script for creating the stats collection.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "verify-appwrite": "tsx scripts/verify-appwrite-optimized.ts",
     "verify-strict": "tsx scripts/verify-strict-appwrite.ts",
     "recreate-collections": "tsx scripts/recreate-collections.ts",
-    "test-connection": "tsx scripts/test-connection.ts"
+    "test-connection": "tsx scripts/test-connection.ts",
+    "create-stats-collection": "tsx scripts/create-stats-collection.ts"
   },
   "keywords": [
     "game",
