Update .env.example to include APPWRITE_STATS_COLLECTION_ID for game statistics

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ APPWRITE_API_KEY=your-api-key
 APPWRITE_DATABASE_ID=your-database-id
 APPWRITE_GAMES_COLLECTION_ID=your-games-collection-id
 APPWRITE_PLAYERS_COLLECTION_ID=your-players-collection-id
+APPWRITE_STATS_COLLECTION_ID=game_stats
 
 # Redis Cloud Configuration
 REDIS_HOST=your-redis-host
